---------------------------------------------------------------------------------------------------
Version: 1.5.0
Date: ???
  Features:
    - Added refresh button
    - Added 'Logistics' search option to search for logistics entities transporting the item
    - 'Storage' search now searches linked-containers (used by some mods)
    - Add item name to interface sub-heading
    - Now attempts to work out the correct item when using 'Control + Shift + Click' on recipes or entities that do not match their item names
---------------------------------------------------------------------------------------------------
Version: 1.4.2
Date: 26 April 2022
  Bugfixes:
    - Fixed crash when 'Signal' search mode encounters a train stop, accumulator, or wall with a blank signal output
---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 26 April 2022
  Features:
    - Added total request count to tooltips of 'Request' result groups
    - Added total signal value to tooltips of 'Signal' result groups
  Changes:
    - Reordered search mode selection list
  Bugfixes:
    - Fixed some furnaces not being found in 'Product' searches
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 25 April 2022
  Features:
    - Added recipes used to tooltips of 'Product' result groups
    - Added total item/fluid count to tooltips of 'Storage' result groups
    - Clearing search (with right-click) now clears results
  Changes:
    - Decreased highlight box duration from 20s to 12s
  Bugfixes:
    - Fixed crash when 'Signal' search mode encounters a modded constant combinator with `item_slot_count = 0` (no signal slots)
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 17 April 2022
  Bugfixes: